[gd_scene load_steps=5 format=3 uid="uid://bdus60m8llq00"]

[ext_resource type="Script" path="res://scripts/options.gd" id="1_t4ygg"]

[sub_resource type="LabelSettings" id="LabelSettings_a6pty"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_rc0it"]
font_size = 25

[sub_resource type="LabelSettings" id="LabelSettings_7kv12"]
font_size = 25

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4ygg")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="PAUSE" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_a6pty")
horizontal_alignment = 1

[node name="Video" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Video"
label_settings = SubResource("LabelSettings_rc0it")

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resolution"

[node name="Resolution" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Fullscreen" type="CheckBox" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Enable Fullscreen"

[node name="Audio" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Audio"
label_settings = SubResource("LabelSettings_7kv12")

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Music" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Music"

[node name="VolSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="SFX" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SFX"

[node name="VolSlider2" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0

[node name="Control" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HSeparator4" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Return" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Return to Game"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit to Title"

[connection signal="item_selected" from="PanelContainer/MarginContainer/VBoxContainer/Resolution" to="." method="_on_resolution_item_selected"]
[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/Fullscreen" to="." method="_on_fullscreen_toggled"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/VolSlider" to="." method="_on_vol_slider_drag_ended"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/VolSlider" to="." method="_on_vol_slider_value_changed"]
[connection signal="drag_ended" from="PanelContainer/MarginContainer/VBoxContainer/VolSlider2" to="." method="_on_vol_slider_2_drag_ended"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/VolSlider2" to="." method="_on_vol_slider_2_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
